# lcore-device-sdk

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/lcore/: did.h  jose.h
core/src/did/: did.c
core/src/jose/: jose.c
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.md
tests/functional/: CMakeLists.txt  test_sdk_basic.c
tools/: CMakeLists.txt  generate_test_payloads.c
